--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,19 @@ src/yadl_dedup
 *.la
 *.lo
 src/stamp-h1
-
+Makefile
+Makefile.in   
+src/Makefile
+src/Makefile.in
+src/Rabin_Karp.csv
+src/dedup_test
+src/dedup_test.log
+src/dedup_test.trs
+src/dedup_test_xunit.xml
+src/delete_test
+src/delete_test.log
+src/delete_test.trs
+src/delete_test_xunit.xml
+src/test-suite.log
+test-driver
+test_dedup_result/
