--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,4 +51,4 @@ add_executable(cs710_dedup_yadl ${SOURCE_FILES})
 add_dependencies(cs710_dedup_yadl libleveldb)
 add_dependencies(cs710_dedup_yadl libcrypto)
 
-target_link_libraries(cs710_dedup_yadl leveldb crypto)
+target_link_libraries(cs710_dedup_yadl ${LIB_DIR}/x86_64/libcrypto.a ${LIB_DIR}/x86_64/libleveldb.a)
