--- a/userspace_application/axidma_test/Makefile
+++ b/userspace_application/axidma_test/Makefile
@@ -1,5 +1,12 @@
-all: main.cpp
-	export __linux__ && arm-linux-gnueabihf-g++ -o axidma_test main.cpp \
-	-I/home/insujang/cs710/dma/xilinx_axidma/include \
-	-I/home/insujang/cs710/dma/xilinx_axidma/examples \
-	-L/home/insujang/cs710/dma/xilinx_axidma/library -laxidma
+
+all: check-env build
+
+check-env:
+ifndef DMADIR
+	$(error DMADIR is undefined)
+endif
+
+build: main.cpp
+	arm-linux-gnueabihf-g++ -o axidma_test main.cpp \
+	-I$(DMADIR)/include \
+	-L$(DMADIR)/library -laxidma
