--- a/SW/.gitmodules
+++ b/SW/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "lib/leveldb"]
+[submodule "x86/leveldb"]
 	path = lib/leveldb
 	url = https://github.com/google/leveldb
-[submodule "lib/sha1"]
+[submodule "x86/sha1"]
 	path = lib/sha1
 	url = https://github.com/mohaps/TinySHA1
